아이콘 추가 및 메타데이터 추가

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,50 @@
 <html lang="ko">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Default Site Info -->
+		<title>SMKim's Homepage</title>
+		<meta name="title" content="SMKim's Homepage" />
+		<meta name="description" content="성민의 개인 웹사이트입니다." />
+		<meta name="application-name" content="SMKim's Homepage" />
+		<meta name="apple-mobile-web-app-title" content="SMKim's Homepage" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app"
-		/>
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<!-- Favicon -->
+		<link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
+		<link rel="apple-touch-icon" size="60x60" href="%PUBLIC_URL%/apple-touch-icon-60x60.png" />
+		<link rel="apple-touch-icon" size="76x76" href="%PUBLIC_URL%/apple-touch-icon-76x76.png" />
+		<link rel="apple-touch-icon" size="120x120" href="%PUBLIC_URL%/apple-touch-icon-120x120.png" />
+		<link rel="apple-touch-icon" size="152x152" href="%PUBLIC_URL%/apple-touch-icon-152x152.png" />
+		<link rel="apple-touch-icon" size="180x180" href="%PUBLIC_URL%/apple-touch-icon-180x180.png" />
+		<link rel="icon" type="image/png" sizes="194x194" href="%PUBLIC_URL%/favicon-194x194.png" />
+		<link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+		<link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/android-chrome-96x96.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>React App</title>
+		<meta name="msapplication-TileColor" content="#808080" />
+		<meta name="msapplication-TitleImage" content="%PUBLIC_URL%/mstitle-144x144.png" />
+		<!-- FaceBook -->
+		<meta property="og:site_name" content="SMKim's Homepage" />
+		<meta property="og:title" content="SMKim's Homepage" />
+		<meta property="og:description" content="성민의 개인 웹사이트입니다." />
+		<meta property="og:url" content="%PUBLIC_URL%" />
+		<meta property="og:image" content="%PUBLIC_URL%/mstitle-310x310.png" />
+		<meta property="og:image:width" content="310" />
+		<meta property="og:image:height" content="310" />
+		<meta property="og:type" content="website" />
+		<meta property="og:local" content="ko_KR" />
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:title" content="SMKim's Homepage" />
+		<meta name="twitter:description" content="성민의 개인 웹사이트입니다." />
+		<meta name="twitter:url" content="%PUBLIC_URL%" />
+		<meta name="twitter:image" content="%PUBLIC_URL%/mstitle-310x310.png" />
+
+		<meta property="article:author" content="Sungmin Kim" />
+		<meta property="article:publisher" content="https://github.com/SMKim94" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
